src/components/Carousel/Carousel.module.css
.carouselWrapper {
  position: relative;
  user-select: none;
}

.carouselWrapperMaximized {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 2;

  width: 100vw;
  height: 100vh;
  /*noinspection CssInvalidPropertyValue*/
  max-height: stretch;
  background-color: #fff;
}

.carousel {
  width: 100%;
  height: 100%;
  overflow: hidden;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  touch-action: manipulation;
  box-sizing: border-box;
}

.shorterCarousel {
  height: calc(90% - 5px) !important;
}

.galleryCarousel {
  background-color: #000;
}

